--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         margin: 0;
     }
     .center{
-        padding-top: 13%;
+        display: flex;
+        height: calc(100% + 560px);
+        justify-content: center;
+        flex-direction: column;
     }
     .logo{
        display: flex;
@@ -23,13 +26,29 @@
        align-content: center; 
        margin-bottom: 20px;
     }
+    .searchbarholder{
+        display: flex;
+        justify-self: center;
+        border-radius: 24px;
+        border: 1px solid #dfe1e5;
+        height: 44px;
+        width: 584px;
+        align-self: center;
+    }
     .searchbar{
         display: flex;
-        justify-content: center;
+        outline: none;
+        background: transparent;
+        border: none;
+        width: 100%;
+        height: 34px;
+        font-size: 16px;
+        font-family: Arial, sans-serif;
     }
     .buttonholder{
         display: flex;
         justify-content: center;
+        padding-top: 18px;
     }
     .buttons{
         display: flex;
@@ -95,6 +114,14 @@
         justify-content: flex-end;
         min-width: 30%;
     }
+    .glass{
+        display: block;
+        height: 20px;
+        justify-content: center;
+        align-self: center;
+        margin: 10px;
+        color: #9aa0a6;
+    }
     .leaf{
         display: block;
         height: 14px;
@@ -115,9 +142,12 @@
     <div class="logo">
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
     </div>
-    <div class="searchbar">
+   <div class="searchbarholder">
+       <img class="glass" src="/home/zach/Documents/the_odin_project/google-homepage/outline_search_black_24dp.png" alt="Magnifying glass">
+           <div class="searchbar">
         <form class="searchbar" action=" " method=" ">
-            <input for="search" type="text">
+            <input class="searchbar" for="search" type="text">
+    </div>
     </div>
     <div class="buttonholder">
         <input class="buttons" value="Google Search" type="submit">
