--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         height: 44px;
         width: 584px;
         align-self: center;
+        margin-top: 10px;
     }
     .searchbar{
         display: flex;
@@ -89,6 +90,7 @@
         height: 34px;
         font-size: 16px;
         font-family: Arial, sans-serif;
+        align-self: center;
     }
     .buttonholder{
         display: flex;
